--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Mickey Mouse</title>
   </head>
   <body>
-<div class="ears"> </div>
-  <div class="head"> </div>
-
+    <div class="ears"> </div>
+      <div class="head"></div>
+        <div class="eyes"></div>
 <link rel="stylesheet" href="/css/main.css">
   </body>
 </html>
