--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="ears"> </div>
       <div class="head"></div>
         <div class="eyes"></div>
+          <div class="mouth1"></div>
 <link rel="stylesheet" href="/css/main.css">
   </body>
 </html>
