mickey's cracked out cousin

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <div class="ears"> </div>
       <div class="head"></div>
         <div class="eyes"></div>
-          <div class="mouth1"></div>
+          <div class="mouth"></div>
+            <div class="innereye"></div>
+              <div class="pupils"></div>
 <link rel="stylesheet" href="/css/main.css">
   </body>
 </html>
